--- a/pyclass/exercises.ipynb
+++ b/pyclass/exercises.ipynb
@@ -756,10 +756,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "947f1158",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lover's are compatible\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -1194,7 +1202,24 @@
    "execution_count": null,
    "id": "0a1a2883",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAMIKE\n",
+      "\n",
+      "\n",
+      "++++++++++++++++++++++++++++++++++\n",
+      "+                                +\n",
+      "         WELCOME TO SAMIKE    \n",
+      "+                                +\n",
+      "++++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Enter your name\")\n",
     "nickname = input(\"Enter your nickname\")\n",
@@ -2084,6 +2109,50 @@
     "    else:\n",
     "        return f\"+{num}\"\n",
     "print(opposite())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72fbacea",
+   "metadata": {},
+   "source": [
+    "Clock shows h hours, m minutes and s seconds after midnight.\n",
+    "\n",
+    "Your task is to write a function which returns the time since midnight in milliseconds.\n",
+    "\n",
+    "Example:\n",
+    "h = 0\n",
+    "m = 1\n",
+    "s = 1\n",
+    "\n",
+    "result = 61000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "55fefa4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61000\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = 0\n",
+    "m = 1\n",
+    "s = 1\n",
+    "\n",
+    "\n",
+    "def Milliseconds(h, m, s):\n",
+    "    return (h*60*60*1000) + (m*60*1000) + (s*1000)\n",
+    "Result = Milliseconds(h, m, s)\n",
+    "\n",
+    "print(Result)"
    ]
   }
  ],
