--- a/pyclass/intro.ipynb
+++ b/pyclass/intro.ipynb
@@ -35,8 +35,7 @@
    "outputs": [],
    "source": [
     "fruits = (\"banana\")\n",
-    "for i in fruits:\n",
-    "        "
+    "for i in fruits:"
    ]
   },
   {
